// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventSnapshotClient.getAccountSnapshot response matches snapshot 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/account?environment=dev&snapshotVersion=accountSnapshotVersion",
  },
]
`;

exports[`EventSnapshotClient.getAccountSnapshot response matches snapshot 1 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/account?environment=dev&snapshotVersion=accountSnapshotVersion&eventSnapshotVersion=eventSnapshotVersion",
  },
]
`;

exports[`EventSnapshotClient.getAccountSnapshot response matches snapshot 1 2`] = `
Object {
  "fakeAccountSnapshot": true,
  "version": "accountSnapshotVersion",
}
`;

exports[`EventSnapshotClient.getAccountSnapshot response matches snapshot 2`] = `
Object {
  "fakeAccountSnapshot": true,
  "version": "accountSnapshotVersion",
}
`;

exports[`EventSnapshotClient.getEventSnapshot response matches snapshot 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/event?environment=dev&snapshotVersion=eventSnapshotVersion&registrationTypeId=registrationTypeId&exclusions=RegistrationPages&exclusions=Sessions",
  },
]
`;

exports[`EventSnapshotClient.getEventSnapshot response matches snapshot 2`] = `
Object {
  "fakeEventSnapshot": true,
  "version": "eventSnapshotVersion",
}
`;

exports[`EventSnapshotClient.getEventTravelAirports response matches snapshot 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/airports?environment=dev&snapshotVersion=eventSnapshotVersion&travelSnapshotVersion=travelSnapshotVersion",
  },
]
`;

exports[`EventSnapshotClient.getEventTravelAirports response matches snapshot 2`] = `
Object {
  "airports": Object {
    "269": Object {
      "city": "Washington",
      "code": "IAD",
      "country": "United States of America",
      "id": 269,
      "name": "Dulles Intl",
      "stateCode": "DC",
    },
    "290": Object {
      "city": "New York",
      "code": "JFK",
      "country": "United States of America",
      "id": 290,
      "name": "John F Kennedy Intl",
      "stateCode": "NY",
    },
  },
  "translations": Object {
    "en-US": Object {
      "269": "Dulles Intl",
      "290": "John F Kennedy Intl",
    },
  },
}
`;

exports[`EventSnapshotClient.getRegCartVisibleProducts matches snapshot 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "authorization": "accessToken",
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/products?environment=dev&snapshotVersion=eventSnapshotVersion",
  },
]
`;

exports[`EventSnapshotClient.getRegCartVisibleProducts matches snapshot 2`] = `
Object {
  "admissionItems": Object {
    "admissionItemId": Object {
      "id": "admissionItemId",
    },
  },
  "sessionProducts": Object {},
}
`;

exports[`EventSnapshotClient.getVisibleProducts matches snapshot 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "authorization": "accessToken",
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/products?environment=dev&snapshotVersion=eventSnapshotVersion&registrationTypeId=registrationTypeId&widgetType=Agenda&widgetId=agendaWidgetId",
  },
]
`;

exports[`EventSnapshotClient.getVisibleProducts matches snapshot 2`] = `
Object {
  "admissionItems": Object {
    "admissionItemId": Object {
      "id": "admissionItemId",
    },
  },
  "sessionProducts": Object {},
}
`;

exports[`EventSnapshotClient.isLatestSnapshot matches snapshot 1`] = `
Array [
  Request {
    "_bodyInit": undefined,
    "_bodyText": "",
    "credentials": "include",
    "headers": Headers {
      "map": Object {
        "cvent-event-id": "eventId",
        "httplogpageloadid": "httplogpageloadid",
        "httplogrequestid": "httplogrequestid",
      },
    },
    "method": "GET",
    "mode": null,
    "referrer": null,
    "url": "https://example.com/eventEmailBase/snapshot/eventId/versions?environment=dev",
  },
]
`;
